<resources>
    <string name="app_name">Shopping List</string>
    <string name="text_button_add_item">Add item</string>
    <string name="text_text_view_item_1"></string>
    <string name="text_text_view_item_2"></string>
    <string name="text_text_view_item_3"></string>
    <string name="text_text_view_item_4"></string>
    <string name="text_text_view_item_5"></string>
    <string name="text_text_view_item_6"></string>
    <string name="text_text_view_item_7"></string>
    <string name="text_text_view_item_8"></string>
    <string name="text_text_view_item_9"></string>
    <string name="text_text_view_item_10"></string>
    <string name="button_find_string">Find</string>
    <string name="edittext_hint_store">Enter a store name</string>
</resources>